Make sure selectize dropdowns are visible in main body

--- a/inst/shinydashboard.css
+++ b/inst/shinydashboard.css
@@ -17,6 +17,11 @@
   margin-right: 20px;
 }
 
+/* So that selectize dropdowns are visible if they go off the bottom. */
+.content {
+  overflow: visible;
+}
+
 .navbar-nav > .messages-menu > .dropdown-menu > li .menu > li > a > .glyphicon,
 .navbar-nav > .messages-menu > .dropdown-menu > li .menu > li > a > .fa,
 .navbar-nav > .messages-menu > .dropdown-menu > li .menu > li > a > .ion {
